--- a/blocks/image.liquid
+++ b/blocks/image.liquid
@@ -1,5 +1,11 @@
 {%- if block.settings.image != blank -%}
-  {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false, block: block -%}
+  {%- if block.settings.link != blank -%}
+    <a href="{{ block.settings.link }}" class="image-link">
+      {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false, block: block -%}
+    </a>
+  {%- else -%}
+    {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false, block: block -%}
+  {%- endif -%}
 {%- elsif request.visual_preview_mode or request.design_mode -%}
   <figure {{ block.shopify_attributes }}>
     {{- 'collection-apparel-1' | placeholder_svg_tag: 'placeholder-svg' -}}
@@ -20,6 +26,11 @@
       "type": "image_picker",
       "id": "mobile_image",
       "label": "t:global.image.mobile_image"
+    },
+    {
+      "type": "url",
+      "id": "link",
+      "label": "t:global.text.link"
     },
     {
       "type": "range",
