--- a/blocks/image.liquid
+++ b/blocks/image.liquid
@@ -1,6 +1,6 @@
 {%- if block.settings.image != blank -%}
   {%- if block.settings.link != blank -%}
-    <a href="{{ block.settings.link }}" {{ block.shopify_attributes }} style="display: block; margin-block: var(--prose-media-spacing);">
+    <a href="{{ block.settings.link }}" {{ block.shopify_attributes }} style="display: block; margin-block-start: 0;">
       {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false -%}
     </a>
   {%- else -%}
