--- a/blocks/image.liquid
+++ b/blocks/image.liquid
@@ -1,7 +1,7 @@
 {%- if block.settings.image != blank -%}
   {%- if block.settings.link != blank -%}
     <a href="{{ block.settings.link }}" {{ block.shopify_attributes }} style="display: block; margin-block-start: 0;">
-      {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false -%}
+      {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false, style: 'margin-block-start: 0;' -%}
     </a>
   {%- else -%}
     {%- render 'media' with block.settings.image, mobile_media: block.settings.mobile_image, max_width: block.settings.max_width, mobile_max_width: block.settings.mobile_max_width, preload: false, block: block -%}
